NIFI-13594 Added web-servlet-shared abstracted from web-utils
- Moved RequestUriBuilder from web-utils to web-servlet-shared
- Refactored proxy header parsing from WebUtils to StandardRequestUriProvider
- Renamed WebUtils to WebClientUtils